# Algorithm_benchmarking

./: .gitignore  CMakeLists.txt  Makefile  algos  build.sh  configure.sh  main.cpp  run.sh  test.cpp
algorithms/: binary_search.hpp  merge_sort.hpp  sAlgo.hpp
include/: CMakeLists.txt  sApp.hpp  sDebugging.hpp  sShader.hpp  sWindow.hpp
include/algorithms/: CMakeLists.txt  binary_search.hpp  bogo_sort.hpp  bubble_sort.hpp  insertion_sort.hpp  merge_sort.hpp  sAlgo.hpp  sGraph.hpp
include/algorithms/binary_tree/: binary_tree.cpp  binary_tree.hpp
include/algorithms/dynamic_programming/: knapsack.cpp  knapsack.hpp
include/algorithms/graph/: sGraph.cpp  sGraph.hpp
include/algorithms/linked_lists/: linked_list.cpp  linked_list.hpp
include/algorithms/sliding_window/: kadanes_algorithm.hpp
include/algorithms/sorting/: bogo_sort.hpp  insertion_sort.hpp  quick_sort.hpp
include/include/: CMakeLists.txt  sApp.hpp  sDebugging.hpp  sUtils.hpp  sWindow.hpp
include/include/algorithms/: CMakeLists.txt  sAlgo.hpp
include/include/algorithms/graph/: sGraph.hpp
include/include/algorithms/searching/: binary_search.hpp
include/include/shapes/: CMakeLists.txt
include/shapes/: sQuad.hpp
shaders/: fragShader.frag  vertShader.vert
src/: CMakeLists.txt  sApp.cpp  sDebugging.cpp  sShader.cpp  sUtils.cpp  sWindow.cpp
